--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@
 osx_image: xcode8.3
 sudo: required
 dist: trusty
-language: c
+language: node_js
+node_js: 11
 matrix:
   include:
   - os: osx
@@ -28,7 +29,6 @@ addons:
 install:
 #- export DISPLAY=':99.0'
 #- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-- nvm install 11
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - source ~/.bashrc
 - npm install -g xvfb-maybe
