--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@
 osx_image: xcode8.3
 sudo: required
 dist: trusty
-language: node_js
-node_js: 11
+language: c
 matrix:
   include:
   - os: osx
   - os: linux
     env: CC=clang CXX=clang++ npm_config_clang=1
     compiler: clang
-  - os: windows
 cache:
   directories:
   - node_modules
@@ -26,9 +24,14 @@ addons:
     - xz-utils
     - rpm
     #- xvfb
+before_install:
+- mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-$([
+  "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-1.2.1.tar.gz
+  | tar -xz -C /tmp/git-lfs --strip-components 1 && /tmp/git-lfs/git-lfs pull
 install:
 #- export DISPLAY=':99.0'
 #- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+- nvm install 11
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - source ~/.bashrc
 - npm install -g xvfb-maybe
@@ -46,4 +49,3 @@ deploy:
   file_glob: true
   file: 'build/gpicdiff*'
   skip_cleanup: true
-  draft: true
