--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Commented sections below can be used to run tests on the CI server
 # https://simulatedgreg.gitbooks.io/electron-vue/content/en/testing.html#on-the-subject-of-ci-testing
-osx_image: xcode8.3
+osx_image: xcode10.1
 sudo: required
 dist: trusty
 language: c
@@ -25,9 +25,9 @@ addons:
     - rpm
     #- xvfb
 before_install:
-- mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-$([
-  "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-1.2.1.tar.gz
-  | tar -xz -C /tmp/git-lfs --strip-components 1 && /tmp/git-lfs/git-lfs pull
+# - mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-$([
+#   "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-1.2.1.tar.gz
+#   | tar -xz -C /tmp/git-lfs --strip-components 1 && /tmp/git-lfs/git-lfs pull
 install:
 #- export DISPLAY=':99.0'
 #- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
@@ -39,7 +39,11 @@ install:
 script:
 #- xvfb-maybe node_modules/.bin/karma start test/unit/karma.conf.js
 #- yarn run pack && xvfb-maybe node_modules/.bin/mocha test/e2e
-- yarn run build
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn run build:linux; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn run build:win; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn run build:mac; fi
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
 branches:
   only:
   - master
