--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_install:
 install:
 #- export DISPLAY=':99.0'
 #- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-- nvm install 11
+- nvm install 10
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - source ~/.bashrc
 - npm install -g xvfb-maybe
@@ -52,5 +52,9 @@ deploy:
   provider: releases
   api_key: $GH_TOKEN
   file_glob: true
-  file: 'build/gpicdiff*'
+  file: build/gpicdiff*
   skip_cleanup: true
+  on:
+    repo: nabetaro/gpicdiff
+    all_branches: true
+    tags: true
