add external diff script for git.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "files": [
       "dist/electron/**/*"
     ],
+    "extraFiles": [
+      "contrib/git-gpicdiff.sh"
+    ],
     "dmg": {
       "contents": [
         {
