--- a/package.json
+++ b/package.json
@@ -1,149 +1,62 @@
 {
   "name": "gpicdiff",
   "description": "Graphical Image Diff: can be integrated into SCM",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "author": "KURASAWA Nozomu <nabetaro@caldron.jp>",
-  "build": {
-    "productName": "gpicdiff",
-    "appId": "jp.caldron.gpicdiff",
-    "afterPack": "CompensateFiles.js",
-    "directories": {
-      "output": "build"
-    },
-    "files": [
-      "dist/electron/**/*"
-    ],
-    "extraFiles": [
-      "contrib/git-gpicdiff.sh"
-    ],
-    "dmg": {
-      "contents": [
-        {
-          "x": 410,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        },
-        {
-          "x": 130,
-          "y": 150,
-          "type": "file"
-        }
-      ]
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "build/icons/icon.icns"
-    },
-    "win": {
-      "target": "nsis",
-      "icon": "build/icons/icon.ico"
-    },
-    "linux": {
-      "synopsis": "Graphical Image Diff",
-      "target": [
-        "deb",
-        "rpm"
-      ],
-      "icon": "build/icons"
-    },
-    "deb": {
-      "packageCategory": "utils"
-    }
+  "private": true,
+  "scripts": {
+    "lint": "vue-cli-service lint",
+    "build": "vue-cli-service build",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:build:dir": "vue-cli-service electron:build --dir",
+    "electron:build:win": "vue-cli-service electron:build --win --x64",
+    "electron:build:mac": "vue-cli-service electron:build --mac --x64",
+    "electron:build:deb": "vue-cli-service electron:build --dir && electron-installer-debian --src dist_electron/linux-unpacked/ --dest dist_electron/ --arch amd64",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
     "electron-args": "^0.1.0",
-    "vue": "^2.5.16",
+    "vue": "^2.6.11",
     "vue-electron": "^1.0.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.2",
+    "vuex-electron": "^1.0.3"
   },
   "devDependencies": {
-    "ajv": "^6.5.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.1.2",
-    "chai": "^4.1.2",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
-    "del": "^3.0.0",
-    "devtron": "^1.4.0",
-    "electron": "^5.0.1",
-    "electron-builder": "^20.39.0",
-    "electron-debug": "^1.5.0",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-installer-debian": "^2.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "inject-loader": "^4.0.1",
-    "karma": "^4.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.2",
-    "karma-electron": "^6.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.0",
-    "mini-css-extract-plugin": "0.4.0",
-    "mocha": "^5.2.0",
-    "multispinner": "^0.2.1",
-    "node-loader": "^0.6.0",
-    "node-sass": "^4.9.2",
-    "require-dir": "^1.0.0",
-    "sass-loader": "^7.0.3",
-    "spectron": "^3.8.0",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "babel-eslint": "^10.0.3",
+    "electron": "^6.0.0",
+    "electron-installer-debian": "^3.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-electron-builder": "~1.4.5",
+    "vue-template-compiler": "^2.6.11"
   },
-  "homepage": "https://github.com/nabetaro/gpicdiff",
-  "license": "MIT",
-  "main": "./dist/electron/main.js",
-  "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:deb": "yarn build:dir && electron-installer-debian --src build/linux-unpacked/ --dest build/ --arch amd64",
-    "build:mac": "node .electron-vue/build.js && electron-builder --mac --x64",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "build:win": "node .electron-vue/build.js && electron-builder --win --x64",
-    "dev": "node .electron-vue/dev-runner.js",
-    "e2e": "npm run pack && mocha test/e2e",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
-    "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "npm run lint:fix",
-    "test": "npm run unit && npm run e2e",
-    "unit": "karma start test/unit/karma.conf.js"
-  }
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
